pkg/apis: Support empty relabelConfig separator
Signed-off-by: Jayapriya Pai <slashpai9@gmail.com>

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -11913,6 +11913,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -11933,6 +11935,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                     oauth2:
@@ -12097,6 +12101,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -12117,6 +12123,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                     scheme:
@@ -12536,6 +12544,8 @@ spec:
                         groups are available. Default is '$1'
                       type: string
                     separator:
+                      default:
+                      - ;
                       description: Separator placed between concatenated source label
                         values. default is ';'.
                       type: string
@@ -12555,6 +12565,8 @@ spec:
                         a replace action. It is mandatory for replace actions. Regex
                         capture groups are available.
                       type: string
+                  required:
+                  - separator
                   type: object
                 type: array
               module:
@@ -12761,6 +12773,8 @@ spec:
                                 Regex capture groups are available. Default is '$1'
                               type: string
                             separator:
+                              default:
+                              - ;
                               description: Separator placed between concatenated source
                                 label values. default is ';'.
                               type: string
@@ -12781,6 +12795,8 @@ spec:
                                 in a replace action. It is mandatory for replace actions.
                                 Regex capture groups are available.
                               type: string
+                          required:
+                          - separator
                           type: object
                         type: array
                       selector:
@@ -12894,6 +12910,8 @@ spec:
                                 Regex capture groups are available. Default is '$1'
                               type: string
                             separator:
+                              default:
+                              - ;
                               description: Separator placed between concatenated source
                                 label values. default is ';'.
                               type: string
@@ -12914,6 +12932,8 @@ spec:
                                 in a replace action. It is mandatory for replace actions.
                                 Regex capture groups are available.
                               type: string
+                          required:
+                          - separator
                           type: object
                         type: array
                       static:
@@ -17727,6 +17747,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -17747,6 +17769,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                   required:
@@ -26375,6 +26399,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -26395,6 +26421,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                   required:
@@ -30469,6 +30497,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -30489,6 +30519,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                     oauth2:
@@ -30653,6 +30685,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -30673,6 +30707,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                     scheme:
