--- a/example/prometheus-operator-crd-full/monitoring.coreos.com_podmonitors.yaml
+++ b/example/prometheus-operator-crd-full/monitoring.coreos.com_podmonitors.yaml
@@ -260,6 +260,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -280,6 +282,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                     oauth2:
@@ -444,6 +448,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -464,6 +470,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                     scheme:
