--- a/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
@@ -4683,6 +4683,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -4703,6 +4705,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                   required:
