--- a/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
@@ -229,6 +229,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -249,6 +251,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                     oauth2:
@@ -413,6 +417,8 @@ spec:
                               capture groups are available. Default is '$1'
                             type: string
                           separator:
+                            default:
+                            - ;
                             description: Separator placed between concatenated source
                               label values. default is ';'.
                             type: string
@@ -433,6 +439,8 @@ spec:
                               in a replace action. It is mandatory for replace actions.
                               Regex capture groups are available.
                             type: string
+                        required:
+                        - separator
                         type: object
                       type: array
                     scheme:
